@@ -9,6 +9,7 @@
     "homepage_spotlight": "Spotlight",
     "official_group_url": "steamcommunity.com/groups/enhancedsteam",
     "remove": "Remove",
+    "get_help": "Get Help",
     "add_selected_dlc_to_cart": "Add selected DLC to cart",
     "credits": "Credits",
     "store_transactions": "Store Transactions",
